# gfx-sandbox

./: .clang-format  .emscripten-version  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
application/: AppEntryMain.cpp  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  OrbitControls.cpp  OrbitControls.h
renderer/: CMakeLists.txt  IRenderer.h  RendererTypes.h
renderer/backends/common/: BackendRegistry.cpp  BackendRegistry.h
renderer/backends/vulkan/: CMakeLists.txt  VulkanConfig.h  VulkanCore.cpp  VulkanCore.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShaderUtils.cpp  VulkanShaderUtils.h  VulkanSwapchain.cpp  VulkanSwapchain.h
renderer/backends/vulkan/shaders/: environment.frag  environment.vert  simple.frag  simple.vert
renderer/backends/webgpu/: CMakeLists.txt  EnvironmentPreprocessor.cpp  EnvironmentPreprocessor.h  MipmapGenerator.cpp  MipmapGenerator.h  PanoramaToCubemapConverter.cpp  PanoramaToCubemapConverter.h  ShaderUtils.cpp  ShaderUtils.h  WebgpuConfig.h  WebgpuRenderer.cpp  WebgpuRenderer.h
renderer/scene/: Environment.cpp  Environment.h  MeshUtils.cpp  MeshUtils.h  Model.cpp  Model.h
samples/gltf_viewer/: CMakeLists.txt  GLTFViewerApp.cpp  GLTFViewerApp.h
